# Logger

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
Logger/: CMakeLists.txt  main.cpp
cmake/: FindBoostStacktrace.cmake
src/: CategorizedLogger.hpp  main.cpp
src/debug/: StackTrace.cpp  StackTrace.hpp
src/logger/: CategorizedLogger.hpp
src/logger/CategorizedLogger/: CategorizedLogger.hpp  CategorizedLoggerSettings.hpp
